data/raw_logs/semantic/sem_4.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_4.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_4.c:1:34: error: void value not ignored as it ought to be
    1 | void f() {} int main() { int x = f(); }
      |                                  ^
